CSS: Fix size of part-trip to align columns

--- a/static/style/simple_vbb.css
+++ b/static/style/simple_vbb.css
@@ -23,6 +23,7 @@ div.row:hover {
 }
 .part-trip {
   margin: 4px auto;
+  height: 50px;
 }
 .trip-products {
   text-align: left;
